crates/panache-parser/tests/snapshots/yaml__yaml_suite_RR7F.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: RR7F
input: "a: 4.2\n? d\n: 23\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
