crates/panache-parser/tests/snapshots/yaml__yaml_suite_RTP8.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: RTP8
input: "%YAML 1.2\n---\nDocument\n... # Suffix\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
