crates/panache-parser/tests/snapshots/yaml__yaml_suite_RZT7.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: RZT7
input: "---\nTime: 2001-11-23 15:01:42 -5\nUser: ed\nWarning:\n  This is an error message\n  for the log file\n---\nTime: 2001-11-23 15:02:31 -5\nUser: ed\nWarning:\n  A slightly different error\n  message.\n---\nDate: 2001-11-23 15:03:17 -5\nUser: ed\nFatal:\n  Unknown variable \"bar\"\nStack:\n  - file: TopClass.py\n    line: 23\n    code: |\n      x = MoreObject(\"345\\n\")\n  - file: MoreClass.py\n    line: 58\n    code: |-\n      foo = bar\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
