crates/panache-parser/tests/snapshots/yaml__yaml_suite_S4GJ.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: S4GJ
input: "---\nfolded: > first line\n  second line\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_KEY_TOKEN:block scalar header line must end at EOL or with a comment@14..24]
