crates/panache-parser/tests/snapshots/yaml__yaml_suite_S4JQ.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: S4JQ
input: "# Assuming conventional resolution:\n- \"12\"\n- 12\n- ! 12\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
