crates/panache-parser/tests/snapshots/yaml__yaml_suite_S4T7.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 871
expression: snapshot
---
case_id: S4T7
input: "aaa: bbb\n...\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
