crates/panache-parser/tests/snapshots/yaml__yaml_suite_S7BG.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: S7BG
input: "---\n- :,\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
