crates/panache-parser/tests/snapshots/yaml__yaml_suite_SKE5.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: SKE5
input: "---\nseq:\n &anchor\n- a\n- b\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
