crates/panache-parser/tests/snapshots/yaml__yaml_suite_SSW6.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: SSW6
input: "---\n'here''s to \"quotes\"'\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
