crates/panache-parser/tests/snapshots/yaml__yaml_suite_SYW4.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: SYW4
input: "hr:  65    # Home runs\navg: 0.278 # Batting average\nrbi: 147   # Runs Batted In\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
